[gd_scene load_steps=3 format=3 uid="uid://dkbtgrdu35uav"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_kwm44"]

[sub_resource type="LabelSettings" id="LabelSettings_mlxtu"]
font_size = 48

[node name="HUD" type="Node2D"]
script = ExtResource("1_kwm44")

[node name="CoinContainer" type="HBoxContainer" parent="."]
clip_contents = true
offset_left = 38.0
offset_top = 401.0
offset_right = 46.0
offset_bottom = 489.0

[node name="TextureRect" type="TextureRect" parent="CoinContainer"]
layout_mode = 2
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="CoinContainer"]
layout_mode = 2
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="CoinContainer"]
layout_mode = 2
expand_mode = 3

[node name="HeartContainer" type="HBoxContainer" parent="."]
clip_contents = true
offset_left = 44.0
offset_top = 506.0
offset_right = 510.0
offset_bottom = 594.0

[node name="TextureRect" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
expand_mode = 3

[node name="DeathScreen" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="DeathScreen"]
layout_mode = 0
offset_left = -42.0
offset_top = -12.0
offset_right = 1186.0
offset_bottom = 679.0
color = Color(0.156863, 0.156863, 0.156863, 0.501961)

[node name="DeathLabel" type="Label" parent="DeathScreen"]
layout_mode = 0
offset_left = 423.0
offset_top = 192.0
offset_right = 768.0
offset_bottom = 259.0
text = "YOU ARE DEAD"
label_settings = SubResource("LabelSettings_mlxtu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="DeathScreen"]
process_mode = 3
layout_mode = 0
offset_left = 510.0
offset_top = 273.0
offset_right = 683.0
offset_bottom = 337.0
text = "RESTART LEVEL"

[connection signal="pressed" from="DeathScreen/RestartButton" to="." method="_on_restart_button_pressed"]
